// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AddSourceModal-network should call onSubmit with the correct filtered data when "Save" is clicked: onSubmit, filtered data 1`] = `
{
  "credentials": [
    1,
  ],
  "hosts": [
    "10.0.0.1",
  ],
  "name": "Test Source",
  "port": "22",
  "source_type": "network",
  "use_paramiko": false,
}
`;

exports[`AddSourceModal-network should render a basic component: basic 1`] = `
<Modal
  variant="small"
  title="t([
  "view.sources.modal-title.add",
  {
    "type": ""
  }
])"
  isOpen
  onClose={[Function]}
  className=""
  titleIconVariant={null}
  titleLabel=""
  aria-label=""
  showClose
  aria-describedby=""
  aria-labelledby=""
  id={undefined}
  actions={[]}
  hasNoBodyWrapper={false}
  appendTo={[Function]}
  ouiaSafe
  position="default"
>
  <SourceForm
  source={undefined}
  sourceType={undefined}
  errors={undefined}
  onClearErrors={[Function]}
  onClose={[Function]}
  onSubmit={[Function]}
 />
</Modal>
`;

exports[`AddSourceModalWithProxy should update proxy_url and submit it: onSubmit with proxy_url 1`] = `
{
  "credentials": [
    1,
  ],
  "disable_ssl": false,
  "hosts": [
    "192.168.0.1",
  ],
  "name": "Test Source",
  "port": "8443",
  "proxy_url": "http://proxy.example.com:8888",
  "source_type": "openshift",
  "ssl_cert_verify": true,
  "ssl_protocol": "SSLv23",
}
`;

exports[`SourceForm should not render proxy_url field for network sources: proxy_url presence, network 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.sources.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="source-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.credentials.label"
])"
  fieldId="credentials"
  isRequired
>
  <TypeaheadCheckboxes
  onChange={[Function]}
  selectedOptions={[]}
  credentialType="network"
  initialSelectedCredentials={[]}
  menuToggleOuiaId="add_credentials_select"
  maxSelections={Infinity}
 />
  false
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.hosts-network.label"
])"
  isRequired
  fieldId="hosts"
>
  <TextArea
  placeholder="t([
  "view.sources.add-modal.hosts-network.placeholder"
])"
  value=""
  onChange={[Function]}
  isRequired
  id="source-hosts"
  name="hosts"
  data-ouia-component-id="hosts_multiple"
  validated="default"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.hosts-network.helper"
])"
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.port-network.label"
])"
  fieldId="port"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.port-network.placeholder"
])"
  type="text"
  id="source-port"
  name="port"
  onChange={[Function]}
  ouiaId="port"
 />
  <HelperText
  id="source-port-helper-text"
>
  "t([
  "view.sources.add-modal.port-network.helper"
])"
</HelperText>
</FormGroup>
</React.Fragment>
  <FormGroup
  label=""
  fieldId="paramiko"
>
  <Checkbox
  label="t([
  "view.sources.add-modal.paramiko.checkbox-label"
])"
  id="paramiko"
  isChecked={false}
  onChange={[Function]}
  ouiaId="options_paramiko"
  className=""
  isLabelWrapped={false}
  isValid
  isDisabled={false}
  isRequired={false}
  ouiaSafe
 />
</FormGroup>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.sources.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.sources.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`SourceForm should render a basic component: basic 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.sources.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="source-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.credentials.label"
])"
  fieldId="credentials"
  isRequired
>
  <TypeaheadCheckboxes
  onChange={[Function]}
  selectedOptions={[]}
  credentialType={undefined}
  initialSelectedCredentials={[]}
  menuToggleOuiaId="add_credentials_select"
  maxSelections={1}
 />
  <HelperText>
  <HelperTextItem
  variant="warning"
>
  "t([
  "view.sources.add-modal.credentials.warning-many"
])"
</HelperTextItem>
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.hosts-others.label"
])"
  isRequired
  fieldId="hosts"
>
  <TextInput
  value=""
  onChange={[Function]}
  isRequired
  id="source-hosts"
  data-testid="input-host"
  name="hosts"
  ouiaId="hosts_single"
  validated="default"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.hosts-others.helper"
])"
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.port-others.label"
])"
  fieldId="port"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.port-others.placeholder"
])"
  type="text"
  id="source-port"
  data-testid="input-port"
  name="port"
  onChange={[Function]}
  ouiaId="port"
 />
  <HelperText
  id="source-port-helper-text"
>
  "t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])"
</HelperText>
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.proxy.label"
])"
  fieldId="proxy_url"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.proxy.placeholder"
])"
  type="text"
  id="proxy-url"
  data-testid="input-proxy"
  name="proxy_url"
  onChange={[Function]}
  ouiaId="proxy_url"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.proxy.helper"
])"
</HelperText>
</FormGroup>
</React.Fragment>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.connection.label"
])"
  fieldId="connection"
>
  <SimpleDropdown
  isFullWidth
  label="SSLv23"
  menuToggleOuiaId="options_ssl_protocol"
  variant="default"
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "SSLv23",
            "ouiaId": "sslv23",
          },
          {
            "item": "TLSv1",
            "ouiaId": "tlsv1",
          },
          {
            "item": "TLSv1.1",
            "ouiaId": "tlsv11",
          },
          {
            "item": "TLSv1.2",
            "ouiaId": "tlsv12",
          },
          {
            "item": "Disable SSL",
            "ouiaId": "disable_ssl",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label=""
  fieldId="ssl_verify"
>
  <Checkbox
  label="t([
  "view.sources.add-modal.ssl-verify.checkbox-label"
])"
  id="ssl_verify"
  isDisabled={false}
  isChecked
  onChange={[Function]}
  ouiaId="options_ssl_cert"
  className=""
  isLabelWrapped={false}
  isValid
  isRequired={false}
  ouiaSafe
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.sources.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.sources.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`SourceForm should render proxy_url field for non-network sources: proxy_url presence, ansible 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.sources.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="source-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.credentials.label"
])"
  fieldId="credentials"
  isRequired
>
  <TypeaheadCheckboxes
  onChange={[Function]}
  selectedOptions={[]}
  credentialType="ansible"
  initialSelectedCredentials={[]}
  menuToggleOuiaId="add_credentials_select"
  maxSelections={1}
 />
  <HelperText>
  <HelperTextItem
  variant="warning"
>
  "t([
  "view.sources.add-modal.credentials.warning-many"
])"
</HelperTextItem>
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.hosts-others.label"
])"
  isRequired
  fieldId="hosts"
>
  <TextInput
  value=""
  onChange={[Function]}
  isRequired
  id="source-hosts"
  data-testid="input-host"
  name="hosts"
  ouiaId="hosts_single"
  validated="default"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.hosts-others.helper"
])"
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.port-others.label"
])"
  fieldId="port"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.port-others.placeholder"
])"
  type="text"
  id="source-port"
  data-testid="input-port"
  name="port"
  onChange={[Function]}
  ouiaId="port"
 />
  <HelperText
  id="source-port-helper-text"
>
  "t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])"
</HelperText>
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.proxy.label"
])"
  fieldId="proxy_url"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.proxy.placeholder"
])"
  type="text"
  id="proxy-url"
  data-testid="input-proxy"
  name="proxy_url"
  onChange={[Function]}
  ouiaId="proxy_url"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.proxy.helper"
])"
</HelperText>
</FormGroup>
</React.Fragment>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.connection.label"
])"
  fieldId="connection"
>
  <SimpleDropdown
  isFullWidth
  label="SSLv23"
  menuToggleOuiaId="options_ssl_protocol"
  variant="default"
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "SSLv23",
            "ouiaId": "sslv23",
          },
          {
            "item": "TLSv1",
            "ouiaId": "tlsv1",
          },
          {
            "item": "TLSv1.1",
            "ouiaId": "tlsv11",
          },
          {
            "item": "TLSv1.2",
            "ouiaId": "tlsv12",
          },
          {
            "item": "Disable SSL",
            "ouiaId": "disable_ssl",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label=""
  fieldId="ssl_verify"
>
  <Checkbox
  label="t([
  "view.sources.add-modal.ssl-verify.checkbox-label"
])"
  id="ssl_verify"
  isDisabled={false}
  isChecked
  onChange={[Function]}
  ouiaId="options_ssl_cert"
  className=""
  isLabelWrapped={false}
  isValid
  isRequired={false}
  ouiaSafe
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.sources.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.sources.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`SourceForm should render proxy_url field for non-network sources: proxy_url presence, openshift 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.sources.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="source-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.credentials.label"
])"
  fieldId="credentials"
  isRequired
>
  <TypeaheadCheckboxes
  onChange={[Function]}
  selectedOptions={[]}
  credentialType="openshift"
  initialSelectedCredentials={[]}
  menuToggleOuiaId="add_credentials_select"
  maxSelections={1}
 />
  <HelperText>
  <HelperTextItem
  variant="warning"
>
  "t([
  "view.sources.add-modal.credentials.warning-many"
])"
</HelperTextItem>
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.hosts-others.label"
])"
  isRequired
  fieldId="hosts"
>
  <TextInput
  value=""
  onChange={[Function]}
  isRequired
  id="source-hosts"
  data-testid="input-host"
  name="hosts"
  ouiaId="hosts_single"
  validated="default"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.hosts-others.helper"
])"
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.port-others.label"
])"
  fieldId="port"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.port-others.placeholder"
])"
  type="text"
  id="source-port"
  data-testid="input-port"
  name="port"
  onChange={[Function]}
  ouiaId="port"
 />
  <HelperText
  id="source-port-helper-text"
>
  "t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "6443"
  }
])"
</HelperText>
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.proxy.label"
])"
  fieldId="proxy_url"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.proxy.placeholder"
])"
  type="text"
  id="proxy-url"
  data-testid="input-proxy"
  name="proxy_url"
  onChange={[Function]}
  ouiaId="proxy_url"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.proxy.helper"
])"
</HelperText>
</FormGroup>
</React.Fragment>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.connection.label"
])"
  fieldId="connection"
>
  <SimpleDropdown
  isFullWidth
  label="SSLv23"
  menuToggleOuiaId="options_ssl_protocol"
  variant="default"
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "SSLv23",
            "ouiaId": "sslv23",
          },
          {
            "item": "TLSv1",
            "ouiaId": "tlsv1",
          },
          {
            "item": "TLSv1.1",
            "ouiaId": "tlsv11",
          },
          {
            "item": "TLSv1.2",
            "ouiaId": "tlsv12",
          },
          {
            "item": "Disable SSL",
            "ouiaId": "disable_ssl",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label=""
  fieldId="ssl_verify"
>
  <Checkbox
  label="t([
  "view.sources.add-modal.ssl-verify.checkbox-label"
])"
  id="ssl_verify"
  isDisabled={false}
  isChecked
  onChange={[Function]}
  ouiaId="options_ssl_cert"
  className=""
  isLabelWrapped={false}
  isValid
  isRequired={false}
  ouiaSafe
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.sources.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.sources.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`SourceForm should render proxy_url field for non-network sources: proxy_url presence, rhacs 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.sources.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="source-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.credentials.label"
])"
  fieldId="credentials"
  isRequired
>
  <TypeaheadCheckboxes
  onChange={[Function]}
  selectedOptions={[]}
  credentialType="rhacs"
  initialSelectedCredentials={[]}
  menuToggleOuiaId="add_credentials_select"
  maxSelections={1}
 />
  <HelperText>
  <HelperTextItem
  variant="warning"
>
  "t([
  "view.sources.add-modal.credentials.warning-many"
])"
</HelperTextItem>
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.hosts-others.label"
])"
  isRequired
  fieldId="hosts"
>
  <TextInput
  value=""
  onChange={[Function]}
  isRequired
  id="source-hosts"
  data-testid="input-host"
  name="hosts"
  ouiaId="hosts_single"
  validated="default"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.hosts-others.helper"
])"
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.port-others.label"
])"
  fieldId="port"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.port-others.placeholder"
])"
  type="text"
  id="source-port"
  data-testid="input-port"
  name="port"
  onChange={[Function]}
  ouiaId="port"
 />
  <HelperText
  id="source-port-helper-text"
>
  "t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])"
</HelperText>
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.proxy.label"
])"
  fieldId="proxy_url"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.proxy.placeholder"
])"
  type="text"
  id="proxy-url"
  data-testid="input-proxy"
  name="proxy_url"
  onChange={[Function]}
  ouiaId="proxy_url"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.proxy.helper"
])"
</HelperText>
</FormGroup>
</React.Fragment>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.connection.label"
])"
  fieldId="connection"
>
  <SimpleDropdown
  isFullWidth
  label="SSLv23"
  menuToggleOuiaId="options_ssl_protocol"
  variant="default"
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "SSLv23",
            "ouiaId": "sslv23",
          },
          {
            "item": "TLSv1",
            "ouiaId": "tlsv1",
          },
          {
            "item": "TLSv1.1",
            "ouiaId": "tlsv11",
          },
          {
            "item": "TLSv1.2",
            "ouiaId": "tlsv12",
          },
          {
            "item": "Disable SSL",
            "ouiaId": "disable_ssl",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label=""
  fieldId="ssl_verify"
>
  <Checkbox
  label="t([
  "view.sources.add-modal.ssl-verify.checkbox-label"
])"
  id="ssl_verify"
  isDisabled={false}
  isChecked
  onChange={[Function]}
  ouiaId="options_ssl_cert"
  className=""
  isLabelWrapped={false}
  isValid
  isRequired={false}
  ouiaSafe
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.sources.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.sources.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`SourceForm should render proxy_url field for non-network sources: proxy_url presence, satellite 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.sources.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="source-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.credentials.label"
])"
  fieldId="credentials"
  isRequired
>
  <TypeaheadCheckboxes
  onChange={[Function]}
  selectedOptions={[]}
  credentialType="satellite"
  initialSelectedCredentials={[]}
  menuToggleOuiaId="add_credentials_select"
  maxSelections={1}
 />
  <HelperText>
  <HelperTextItem
  variant="warning"
>
  "t([
  "view.sources.add-modal.credentials.warning-many"
])"
</HelperTextItem>
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.hosts-others.label"
])"
  isRequired
  fieldId="hosts"
>
  <TextInput
  value=""
  onChange={[Function]}
  isRequired
  id="source-hosts"
  data-testid="input-host"
  name="hosts"
  ouiaId="hosts_single"
  validated="default"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.hosts-others.helper"
])"
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.port-others.label"
])"
  fieldId="port"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.port-others.placeholder"
])"
  type="text"
  id="source-port"
  data-testid="input-port"
  name="port"
  onChange={[Function]}
  ouiaId="port"
 />
  <HelperText
  id="source-port-helper-text"
>
  "t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])"
</HelperText>
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.proxy.label"
])"
  fieldId="proxy_url"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.proxy.placeholder"
])"
  type="text"
  id="proxy-url"
  data-testid="input-proxy"
  name="proxy_url"
  onChange={[Function]}
  ouiaId="proxy_url"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.proxy.helper"
])"
</HelperText>
</FormGroup>
</React.Fragment>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.connection.label"
])"
  fieldId="connection"
>
  <SimpleDropdown
  isFullWidth
  label="SSLv23"
  menuToggleOuiaId="options_ssl_protocol"
  variant="default"
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "SSLv23",
            "ouiaId": "sslv23",
          },
          {
            "item": "TLSv1",
            "ouiaId": "tlsv1",
          },
          {
            "item": "TLSv1.1",
            "ouiaId": "tlsv11",
          },
          {
            "item": "TLSv1.2",
            "ouiaId": "tlsv12",
          },
          {
            "item": "Disable SSL",
            "ouiaId": "disable_ssl",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label=""
  fieldId="ssl_verify"
>
  <Checkbox
  label="t([
  "view.sources.add-modal.ssl-verify.checkbox-label"
])"
  id="ssl_verify"
  isDisabled={false}
  isChecked
  onChange={[Function]}
  ouiaId="options_ssl_cert"
  className=""
  isLabelWrapped={false}
  isValid
  isRequired={false}
  ouiaSafe
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.sources.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.sources.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`SourceForm should render proxy_url field for non-network sources: proxy_url presence, vcenter 1`] = `
<Form>
  <FormGroup
  label="t([
  "view.sources.add-modal.name.label"
])"
  isRequired
  fieldId="name"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.name.placeholder"
])"
  isRequired
  type="text"
  id="source-name"
  name="name"
  validated="default"
  onChange={[Function]}
  ouiaId="name"
 />
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.credentials.label"
])"
  fieldId="credentials"
  isRequired
>
  <TypeaheadCheckboxes
  onChange={[Function]}
  selectedOptions={[]}
  credentialType="vcenter"
  initialSelectedCredentials={[]}
  menuToggleOuiaId="add_credentials_select"
  maxSelections={1}
 />
  <HelperText>
  <HelperTextItem
  variant="warning"
>
  "t([
  "view.sources.add-modal.credentials.warning-many"
])"
</HelperTextItem>
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.hosts-others.label"
])"
  isRequired
  fieldId="hosts"
>
  <TextInput
  value=""
  onChange={[Function]}
  isRequired
  id="source-hosts"
  data-testid="input-host"
  name="hosts"
  ouiaId="hosts_single"
  validated="default"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.hosts-others.helper"
])"
</HelperText>
  <ErrorFragment
  errorMessage={undefined}
  fieldTouched={false}
 />
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.port-others.label"
])"
  fieldId="port"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.port-others.placeholder"
])"
  type="text"
  id="source-port"
  data-testid="input-port"
  name="port"
  onChange={[Function]}
  ouiaId="port"
 />
  <HelperText
  id="source-port-helper-text"
>
  "t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])"
</HelperText>
</FormGroup>
  <FormGroup
  label="t([
  "view.sources.add-modal.proxy.label"
])"
  fieldId="proxy_url"
>
  <TextInput
  value=""
  placeholder="t([
  "view.sources.add-modal.proxy.placeholder"
])"
  type="text"
  id="proxy-url"
  data-testid="input-proxy"
  name="proxy_url"
  onChange={[Function]}
  ouiaId="proxy_url"
 />
  <HelperText>
  "t([
  "view.sources.add-modal.proxy.helper"
])"
</HelperText>
</FormGroup>
</React.Fragment>
  <React.Fragment>
  <FormGroup
  label="t([
  "view.sources.add-modal.connection.label"
])"
  fieldId="connection"
>
  <SimpleDropdown
  isFullWidth
  label="SSLv23"
  menuToggleOuiaId="options_ssl_protocol"
  variant="default"
  onSelect={[Function]}
  dropdownItems={[
          {
            "item": "SSLv23",
            "ouiaId": "sslv23",
          },
          {
            "item": "TLSv1",
            "ouiaId": "tlsv1",
          },
          {
            "item": "TLSv1.1",
            "ouiaId": "tlsv11",
          },
          {
            "item": "TLSv1.2",
            "ouiaId": "tlsv12",
          },
          {
            "item": "Disable SSL",
            "ouiaId": "disable_ssl",
          },
        ]}
 />
</FormGroup>
  <FormGroup
  label=""
  fieldId="ssl_verify"
>
  <Checkbox
  label="t([
  "view.sources.add-modal.ssl-verify.checkbox-label"
])"
  id="ssl_verify"
  isDisabled={false}
  isChecked
  onChange={[Function]}
  ouiaId="options_ssl_cert"
  className=""
  isLabelWrapped={false}
  isValid
  isRequired={false}
  ouiaSafe
 />
</FormGroup>
</React.Fragment>
  <ActionGroup>
  <Button
  variant="primary"
  onClick={[Function]}
  isDisabled
>
  "t([
  "view.sources.add-modal.actions.save"
])"
</Button>
  <Button
  variant="link"
  onClick={[Function]}
>
  "t([
  "view.sources.add-modal.actions.cancel"
])"
</Button>
</ActionGroup>
</Form>
`;

exports[`SourceForm should render specifics to different source types: form, ansible 1`] = `
<div
  class="pf-v6-c-helper-text"
  id="source-port-helper-text"
>
  t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])
</div>
`;

exports[`SourceForm should render specifics to different source types: form, network 1`] = `
<div
  class="pf-v6-c-helper-text"
  id="source-port-helper-text"
>
  t([
  "view.sources.add-modal.port-network.helper"
])
</div>
`;

exports[`SourceForm should render specifics to different source types: form, openshift 1`] = `
<div
  class="pf-v6-c-helper-text"
  id="source-port-helper-text"
>
  t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "6443"
  }
])
</div>
`;

exports[`SourceForm should render specifics to different source types: form, rhacs 1`] = `
<div
  class="pf-v6-c-helper-text"
  id="source-port-helper-text"
>
  t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])
</div>
`;

exports[`SourceForm should render specifics to different source types: form, satellite 1`] = `
<div
  class="pf-v6-c-helper-text"
  id="source-port-helper-text"
>
  t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])
</div>
`;

exports[`SourceForm should render specifics to different source types: form, vcenter 1`] = `
<div
  class="pf-v6-c-helper-text"
  id="source-port-helper-text"
>
  t([
  "view.sources.add-modal.port-others.helper",
  {
    "port": "443"
  }
])
</div>
`;

exports[`useSourceForm should include proxy_url in the filtered formData for non-network types: filteredData with proxy_url 1`] = `
{
  "credentials": [],
  "disable_ssl": false,
  "hosts": [],
  "port": "6443",
  "proxy_url": "https://proxy.mycompany.com:443",
  "source_type": "openshift",
  "ssl_cert_verify": true,
  "ssl_protocol": "SSLv23",
}
`;

exports[`useSourceForm should initialize formData correctly: formData 1`] = `
{
  "credentials": [],
  "hosts": "",
  "name": "",
  "port": "",
  "proxy_url": "",
  "sslProtocol": "SSLv23",
  "sslVerify": true,
  "useParamiko": false,
}
`;
